# fswatch

fswatch/src/: fswatch.cpp
libfswatch/: CMakeLists.txt
libfswatch/include/libfswatch/c/: cevent.h  cfilter.h  libfswatch.h
libfswatch/include/libfswatch/c++/: event.hpp  fen_monitor.hpp  filter.hpp  fsevents_monitor.hpp  inotify_monitor.hpp  kqueue_monitor.hpp  libfswatch_exception.hpp  libfswatch_map.hpp  libfswatch_set.hpp  monitor.hpp  monitor_factory.hpp  path_utils.hpp  poll_monitor.hpp  windows_monitor.hpp
libfswatch/include/libfswatch/c++/string/: string_utils.hpp
libfswatch/include/libfswatch/c++/windows/: win_directory_change_event.hpp  win_error_message.hpp  win_handle.hpp  win_paths.hpp  win_strings.hpp
libfswatch/src/libfswatch/c/: cevent.cpp  libfswatch.cpp  libfswatch_log.cpp
libfswatch/src/libfswatch/c++/: event.cpp  fen_monitor.cpp  filter.cpp  fsevents_monitor.cpp  inotify_monitor.cpp  kqueue_monitor.cpp  libfswatch_exception.cpp  monitor.cpp  monitor_factory.cpp  path_utils.cpp  poll_monitor.cpp  windows_monitor.cpp
libfswatch/src/libfswatch/c++/string/: string_utils.cpp
